Add funcs query parameter (#56)
* Change UI to match CNU

* Add funcs query parameter

--- a/src/assets/locales/ko.json
+++ b/src/assets/locales/ko.json
@@ -161,6 +161,9 @@
   "toolbar.enter-vr-button": "VR로 입장하기",
   "toolbar.leave-room-button": "나가기",
   "toolbar.camera-view": "3인칭",
+  "toolbar.mainpage": "메인페이지로",
+  "toolbar.channel": "채널",
+  "channel-sidebar.title": "채널",
   "avatar-setup-sidebar.title": "아바타 설정",
   "avatar-settings-content.display-name-label": "닉네임",
   "avatar-settings-content.display-name-description": "알파벳, 하이픈(-), 언더스코어(_), 물결(~)로 구성된 3~32글자의 이름을 입력해주세요.",
@@ -272,6 +275,7 @@
   "reaction-popover.emoji-label.angry": "화남",
   "reaction-popover.emoji-label.cry": "슬픔",
   "reaction-popover.title": "이모지",
+  "mainpage-popover.title": "메인페이지로",
   "tips.mobile.look": "환영합니다! 👋 화면을 드래그 하거나 터치해서 주변을 확인해보세요.",
   "tips.mobile.locomotion": "잘하셨습니다! 두 손가락을 이용해서 움직이세요.",
   "tips.mobile.invite": "왼쪽 아래에 있는 초대하기 버튼을 이용하여 Room을 공유해보세요.",
